<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.iteso.tarea01.ActivityMain">
    <android.support.v7.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:layout_weight="1"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:id="@+id/nombre"
            android:inputType="textPersonName"
            android:singleLine="true"/>
        <EditText
            android:layout_below="@id/nombre"
            android:id="@+id/telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/escolaridad"
            android:id="@+id/escolaridad"/>
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:entries="@array/array_nivel"
            android:layout_height="wrap_content">
        </Spinner>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genero"
            android:id="@+id/genero"
            android:textColor="@color/dark"
            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup">

            <RadioButton
                android:id="@+id/rb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/femenino"/>
            <RadioButton
                android:id="@+id/rb2"
                android:layout_marginLeft="50dp"
                android:text="@string/masculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </RadioGroup>

        <TextView
            android:id="@+id/libro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/libro"
            />
        <AutoCompleteTextView
            android:id="@+id/arrayLibros"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="text"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deporte"
            android:id="@+id/deporte"/>
    </android.support.v7.widget.LinearLayoutCompat>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/limpiar"
        android:id="@+id/limpiar"
        />

</LinearLayout>
